* Reworked the SDL input stack so `wait_for_key()` returns SDL2 keycodes, `SDLkey` helpers translate to/from SDL names, and the main loop uses plain SDL event handling with constant frame pacing; the sample `thrust.rc` now ships beside the game.


Version 0.89c-sdl1-current

* Renamed `datasrc/` to `assets/` and updated the Makefile to match the new layout.


Version 0.89c-sdl1 November 11, 2011

* Added SDL support


Version 0.89c September 30, 2001

* Fixed an escape sequence bug in the man page source.

* Fixed the description of the .thrustrc file in the man page to use a list.

* Silenced a couple of warnings.

* Changed the Makefile so that all .c files in datasrc/ are really prebuilt
  and also fixed it so that the prebuilt versions are used when building. This
  should specifically remove the build dependency on the netpbm package.

* Fixed the thrust.html ducumentation target.

* Updated the previously forgotten email instance of Joey Hess.


Version 0.89b September 19, 2001

* Merge from Debian package: Handle dummy SVGAlib failure gracefully.

* Merge from Debian package: Include description of the .thrustrc file in the
  man page originally contributed by Jonathan Eisenstein.

* Merge from Debian package: Joey Hess changed his email address *again*. ;-)

* Updated config.guess and config.sub.


Version 0.89a September 16, 2001

* Dag Asheim tripped on a bug when he designed a level. Sliders were not
  correctly connected to buttons when multple sets of buttons existed.

* The configure script failed to detect vga_getmodenumber in SVGAlib even
  if it was present.

* Cosmetic bug fixed in level6.def.


Version 0.89  August 18, 1998

* Thrust is now behaving better with respect to the laws of physics. It
  is the case when the ship and the blob are connected that has been
  updated. It should now be correct. I used the following passage from
  a physics text book as guidance:

  "The center of mass of a system of particles moves as if it were a