@@ -4,11 +4,12 @@
 #ifndef OPTIONS_H
 #define OPTIONS_H
 
-#define OPTC "vhdz:"
+#define OPTC "vhdz:s"
 #define OPTS \
       { "version",        no_argument,       0, 'v' }, \
       { "help",           no_argument,       0, 'h' }, \
       { "nodemo",         no_argument,       0, 'd' }, \
-      { "zoom",           required_argument, 0, 'z' }
+      { "zoom",           required_argument, 0, 'z' }, \
+      { "smooth",         no_argument,       0, 's' }
 
 #endif /* OPTIONS_H */
